Minor refactoring day 2